404 page fix, bump up content container on Y axis for better whitespace areas

--- a/src/components/styles/Blue.module.css
+++ b/src/components/styles/Blue.module.css
@@ -58,15 +58,6 @@ li.links a {
     .item3 { grid-area: left; min-width: 2.5rem; }
     .item4 { grid-area: footer; }
 
-.bearLogo {
-  opacity: 0.9;
-  height: 4rem;
-  width: auto;
-  margin: 0 auto;
-  padding-top: 0.25rem;
-  transform: translate(-1rem, 0);
-}
-
   .bunchabears {
     background-color: peachpuff;
     transform: translateY(-1rem);
@@ -75,10 +66,19 @@ li.links a {
     -o-transform: translateY(-1rem);
     padding: 1rem 0;
   }
-    
-    #rb {
-      height: 4.25rem;
+
+    .bearLogo {
+      opacity: 0.9;
+      height: 4rem;
+      width: auto;
+      margin: 0 1.33rem;
+      padding-top: 0.25rem;
+      transform: translate(-1rem, 0);
     }
+    
+      #rb {
+        height: 4.25rem;
+      }
 
 .contentContainer {
   display: grid;
